# Matrix-Maze

./: .gitattributes  .gitignore  BUILD.md  LICENSE  LICENSE-MPL  README.md  TODO.md  index.html  maze_map.txt
app/: best_times.json  index.html  maze_map.txt  package-lock.json  package.json
app/src/: constants.js  main.js  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: game.rs  main.rs  maze.rs  raycast.rs
app/src-tauri/src/dither/: bayer.rs  mod.rs  pattern.rs
src/: main.js
src-tauri/src/: game.rs  main.rs
