[package]
# Game name: "Matrix Maze" - if changing, also update:
# - src/constants.js (GAME_NAME)
# - src-tauri/tauri.conf.json (productName, title)
# - package.json (name)
# - index.html (title)
name = "matrix-maze"
version = "1.1.0"
description = "Matrix Maze - 3D ASCII Labyrinth Adventure Game"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

